# game-of-life

./: Cargo.toml  LICENSE  README.md
src/: main.rs
