[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Robert Bigelow <rfbigelow@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
rand = { version = "0.8.1" }