[package]
name = "game_of_life"
version = "0.4.0"
authors = ["Robert Bigelow <rfbigelow@mac.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
rand = { version = "0.8.1" }